--- a/advance.html
+++ b/advance.html
@@ -8,7 +8,7 @@
     <body>
         <form action="https://www.google.ca/advanced_search" class="google-advance">
             <div>
-                <label for="advance-search">Advanced Search</label><br><br>
+                <label id = "advance-search" for="advance-search">Advanced Search</label><br><br>
             </div>
 
             <div>           
