--- a/advance.html
+++ b/advance.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Advanced Search</title>
-        <link rel = "stylesheet" href="style.css"
+        <link rel = "stylesheet" href="advanced.css"
     </head>
 
     <body>
