--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     </head>
 
     <body>
-        <form action="https://google.com/search" class="google-buttons">
-            <div class = "homepage"><img src="search_image.png" alt="Google"></div> 
-            <div class = "homepage"><input type="text" name="q"></div>
-            <div class = "homepage">
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
-            </div>
-            <div class = "homepage">
-                <a href="image.html">Images</a>
-                <a href="advance.html">Advanced Search</a>
-            </div>
-              
-        </form>
+        <div class = "index-links">
+            <a href="image.html">Images</a>
+            <a href="advance.html">Advanced Search</a>
+        </div> 
+        <div class = "flex-container">
+            <form class="google-buttons" action="https://google.com/search">
+                    <div class = "homepage"><img src="search_image.png" alt="Google"></div> 
+                    <div id ="main-search" class = "homepage"> <input type="text" name="q"></div>
+                    <div class = "homepage">
+                        <input type="submit" value="Google Search">
+                        <input type="submit" value="I'm Feeling Lucky">
+                    </div>
+            </form>
+        </div>
     </body>
 </html>
